RESOLVED FIXED305023
Select element style fallback is incorrect.
https://bugs.webkit.org/show_bug.cgi?id=305023
Summary Select element style fallback is incorrect.
Megan Gardner
Reported 2026-01-06 17:45:52 PST
Select element style fallback is incorrect.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-06 17:45:59 PST
Megan Gardner
Comment 2 2026-01-06 17:50:10 PST
EWS
Comment 3 2026-01-07 10:50:50 PST
Committed 305228@main (394eb739891a): <https://commits.webkit.org/305228@main> Reviewed commits have been landed. Closing PR #56177 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.