Select element style fallback is incorrect. https://bugs.webkit.org/show_bug.cgi?id=305023 rdar://167662316

Reviewed by Abrar Rahman Protyasha.

When refactoring RenderMenuList and HTMLSelectElement
I ran into this code that logically is incorrect.
It will never fallback to the menu style unless the index
is already zero, instead of checking to make sure that
there is an element at the zero index.
Rewriting the code to be more readable
and correct, for a cleaner refactor.

* Source/WebCore/rendering/RenderMenuList.cpp:
(RenderMenuList::itemStyle const):

Canonical link: https://commits.webkit.org/305228@main